--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^5.0.6",
     "react-responsive-modal": "^2.0.0",
     "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-promise-middleware": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
